--- a/myrepolib/templates/hello.html
+++ b/myrepolib/templates/hello.html
@@ -48,28 +48,21 @@
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
+          {%for titles,outlet,date,links in result%} 
           <div class="col-md-4">
-            <h2>Article 1</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View article &raquo;</a></p>
+            <h2>{{titles}}</h2>
+            <p>{{outlet}}</p>
+            <p>{{date}}</p>
+            <p><a class="btn btn-secondary" href='{{links}}' role="button">View article &raquo;</a></p>
           </div>
-          <div class="col-md-4">
-            <h2>Article 2</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View article &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Article 3</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View article &raquo;</a></p>
-          </div>
+          {% endfor %} 
         </div>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <br>
           <br>
-          <p>Aperature.AI <a href="https://sps.northwestern.edu/masters/data-science/curriculum-specializations.php">Northwestern University</a>, by <a href="https://www.linkedin.com/in/daniel-smith-14a607a8">Team 54</a>.</p>
+          <p>Aperature.AI <a href="https://sps.northwestern.edu/masters/data-science/curriculum-specializations.php">Northwestern University</a>, by <a href="">Team 54</a>.</p>
         </div>
       </footer>
     </div>
