--- a/myrepolib/templates/hello.html
+++ b/myrepolib/templates/hello.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,7 +15,7 @@
 
   <style>
     .jumbotron {
-      background-color: rgb(175, 172, 180); 
+      background-color: rgb(107, 140, 201); 
     }
     </style>
     </head>
@@ -48,11 +50,12 @@
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
-          {%for titles,outlet,date,links in result%} 
-          <div class="col-md-4">
-            <h2>{{titles}}</h2>
-            <p>{{outlet}}</p>
-            <p>{{date}}</p>
+          {%for titles,outlet,date,links,img in result%} 
+          <div class="col-md-4" style = " border-style: solid; border-color:rgb(247, 249, 255);">
+            <h4>{{titles}}</h4>
+            <img src= {{img}} style="width:300px;height:200px;"> 
+            <p><b>{{outlet}}</b></p>
+            <p><i>{{date}}</i></p>
             <p><a class="btn btn-secondary" href='{{links}}' role="button">View article &raquo;</a></p>
           </div>
           {% endfor %} 
