--- a/myrepolib/templates/hello.html
+++ b/myrepolib/templates/hello.html
@@ -15,7 +15,7 @@
 
   <style>
     .jumbotron {
-      background-color: rgb(107, 140, 201); 
+      background-color: rgb(255, 255, 255); 
     }
     </style>
     </head>
@@ -27,8 +27,7 @@
       <header class="masthead mb-auto"><div class="jumbotron">
         <div class="inner">
             
-          <h1 style="color:whitesmoke;" class="masthead-brand">Aperature.AI{{a}}</h1>
-          <h5 class="masthead-brand"><i>"Know the full story"</i></h5> 
+           <img src="https://i.ibb.co/zs6xh83/Screen-Shot-2021-01-19-at-4-04-37-PM.png" style="width:75x;height:75px;"> 
         </div>
         </div>
       </header>
