--- a/myrepolib/templates/test.html
+++ b/myrepolib/templates/test.html
@@ -76,7 +76,7 @@
     <form method="POST" action="/result">
       <div class="form-group">
           <input type="submit" class="btn btn-outline-primary" id="liberal" name="vote" value="Liberal" >
-          <input type="submit" class="btn btn-outline-secondary" id="middle" name="vote" value="Middle" >
+          <!--<input type="submit" class="btn btn-outline-secondary" id="middle" name="vote" value="Middle" > -->
           <input type="submit" class="btn btn-outline-danger" id="conservative" name="vote" value = "Conservative"> 
           <input type="hidden" id="pk" name="pk" value={{hash}}>
       </div>
