--- a/myrepolib/templates/base.html
+++ b/myrepolib/templates/base.html
@@ -33,7 +33,7 @@
       </header>
       
 
-      <main role="main" class="inner cover" >
+      <main role="main" class="inner cover align-self-center w-75" >
         <p class="lead">
 
             <form method="POST" action="/result">
