--- a/myrepolib/templates/home.html
+++ b/myrepolib/templates/home.html
@@ -8,7 +8,7 @@
           {%for titles,outlet,date,links,img in result%} 
           <div class="col-md-4" style = " border-style: solid; border-color:rgb(247, 249, 255);">
             <h4>{{titles}}</h4>
-            <a href="{{links}}"><img src= {{img}} style="width:300px;height:200px;"  title="{{outlet}}"> </a>
+            <a href="{{links}}"><img src= {{img}} style="width:300px;height:200px;" onerror=this.src="https://image.freepik.com/free-vector/breaking-news-template_23-2148507392.jpg" style="width:300px;height:200px;" title="{{outlet}}"> </a>
             <p><b>{{outlet}}</b></p>
             <p><i>{{date}}</i></p>
             <p><a class="btn btn-secondary" href='{{links}}' role="button">View article &raquo;</a></p>
