--- a/myrepolib/templates/base.html
+++ b/myrepolib/templates/base.html
@@ -27,7 +27,8 @@
       <header class="masthead mb-auto"><div class="jumbotron">
         <div class="inner">
             
-          <a href="/"> <img src="https://i.ibb.co/TrNwvrh/logo.png"> </a>
+         <!-- <a href="/"> <img src="https://i.ibb.co/TrNwvrh/logo.png"> </a>--> 
+          <a href="/"> <img src="https://i.ibb.co/7QMzk59/Logo.jpg" style="width:200px;height:150px;"> </a>
         </div>
         </div>
       </header>
