--- a/myrepolib/templates/base.html
+++ b/myrepolib/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="https://i.ibb.co/7QMzk59/Logo.jpg">
 
   
 
@@ -29,6 +29,7 @@
             
          <!-- <a href="/"> <img src="https://i.ibb.co/TrNwvrh/logo.png"> </a>--> 
           <a href="/"> <img src="https://i.ibb.co/7QMzk59/Logo.jpg" style="width:200px;height:150px;"> </a>
+         
         </div>
         </div>
       </header>
